--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "litiano/sap",
+    "name": "litiano/sap-lib",
     "description": "Lib para conectar com SAP via DI-API",
     "type": "library",
     "license": "MIT",
@@ -10,5 +10,7 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "php": ">=5.5.9"
+    }
 }
