--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,10 @@
     ],
     "require": {
         "php": ">=5.5.9"
+    },
+    "autoload": {
+        "psr-4": {
+            "Litiano\\Sap\\": "src"
+        }
     }
 }
