--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9"
+        "php": ">=5.5.9",
+        "ext-com_dotnet": "*",
+        "ext-pdo_sqlsrv": "*"
     },
     "autoload": {
         "psr-4": {
