--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,10 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9",
+        "php": ">=5.6.4",
         "ext-com_dotnet": "*",
-        "ext-pdo_sqlsrv": "*"
+        "ext-pdo_sqlsrv": "*",
+        "laravel/framework": "5.*"
     },
     "autoload": {
         "psr-4": {
