--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
             "email": "litiano.moura@yahoo.com.br"
         }
     ],
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.6.4",
         "ext-com_dotnet": "*",
@@ -17,6 +18,13 @@
     "autoload": {
         "psr-4": {
             "Litiano\\Sap\\": "src"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Litiano\\Sap\\SapServiceProvider"
+            ]
         }
     }
 }
