--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,7 @@
                 "Litiano\\Sap\\SapServiceProvider"
             ]
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
