--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     "php": ">=7.2.3",
     "ext-com_dotnet": "*",
     "ext-pdo_sqlsrv": "*",
-    "laravel/framework": "^5.5",
-    "ext-com": "*"
+    "laravel/framework": "^5.5"
   },
   "autoload": {
     "psr-4": {
