--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "litiano/sap",
+  "version": "2.2.0",
   "description": "Lib para conectar com SAP via DI-API",
   "license": "MIT",
   "authors": [
