--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "litiano/sap",
-  "version": "2.2.4",
+  "version": "2.2.5",
   "description": "Lib para conectar com SAP via DI-API",
   "license": "MIT",
   "authors": [
@@ -13,7 +13,7 @@
     "php": ">=7.2.3",
     "ext-com_dotnet": "*",
     "ext-pdo_sqlsrv": "*",
-    "laravel/framework": "^5.5",
+    "laravel/framework": "^5.5|^6.0",
     "ext-pdo": "*"
   },
   "autoload": {
